--- a/frontend/mrs.html
+++ b/frontend/mrs.html
@@ -10,7 +10,7 @@
     
     <a href="home.html">Back to register</a>
     <h1>Medical Records System Data Management</h1>
-    <div id="Medical_Records_System">
+    <div id="MRS">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
    <script src="mrs.js" charset="UTF-8" ></script>
