--- a/frontend/mrs.html
+++ b/frontend/mrs.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="mrs.css">
 </head>
 <body>
-    
-    <a href="home.html">Back to register</a>
-    <h1>Medical Records System Data Management</h1>
+    <a href="home.html" class="user-management-link">Back to register</a>
+    <h1 class="header">Medical Records System Data Management</h1>
     <div id="MRS">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-   <script src="mrs.js" charset="UTF-8" ></script>
+    <script src="mrs.js" charset="UTF-8" ></script>
 </body>
 </html>
