--- a/frontend/home.html
+++ b/frontend/home.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Medical Records System</h1>
-        <a href="mrs.html">Go To User Management</a>
+        <h1 class="header">Medical Records System</h1>
         <form> 
             <div>
                 <label for="name_surname">Name-Surname</label>
@@ -57,6 +56,7 @@
             </div>
         </form>
         <div id="message" class="message"></div>
+        <a href="mrs.html" class="user-management-link">Go To User Management</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
