--- a/frontend/home.html
+++ b/frontend/home.html
@@ -3,51 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory Form</title>
+    <title>Medical Records System</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="header">Medical Records System</h1>
+        <h1 class="header">Medical Records Form</h1>
         <form> 
+            <div class="bold-header">Patient Information</div>
             <div>
-                <label for="name_surname">Name-Surname</label>
+                <div class="name_surname">Name-Surname</div>
                 <input type="text" id="name_surname" name="name_surname" >
             </div>
             <div>
-                <label for="age">Age</label>
+                <div class="age">Age</div>
                 <input type="number" id="age" name="age" >
             </div>
             <div>
-                <label for="chronic_disease">Chronic Disease</label>
+                <div class="chronic_disease">Chronic Disease</div>
                 <input type="text" id="chronic_disease" name="chronic_disease" >
             </div>
             <div>
-                <label for="date_of_service">Date of Service</label>
+                <div class="date_of_service">Date of Service</div>
                 <input type="datetime-local" id="date_of_service" name="date_of_service" >
             </div>
+            <div class="bold-header">Appointment Details</div>
             <div>
-                <label for="initial_symptoms">Initial Symptoms</label>
+                <div class="initial_symptoms">Initial Symptoms</div>
                 <input type="text" id="initial_symptoms" name="initial_symptoms" >
             </div>
             <div>
-                <label for="diagnosis">Diagnosis</label>
+                <div class="diagnosis">Diagnosis</div>
                 <input type="text" id="diagnosis" name="diagnosis" >
             </div>
             <div>
-                <label for="treatment_and_prescribed_medication">Treatment and Prescribed Medication</label>
+                <div class="treatment_and_prescribed_medication">Treatment and Prescribed Medication</div>
                 <input type="text" id="treatment_and_prescribed_medication" name="treatment_and_prescribed_medication" >
             </div>
+            <div class="bold-header">Appointment Details</div>
             <div>
-                <label for="appointment_date">Appointment Date</label>
+                <div class="appointment_date">Appointment Date</div>
                 <input type="datetime-local" id="appointment_date" name="appointment_date" >
             </div>
             <div>
-                <label for="attending_physician">Attending Physician</label>
+                <div class="attending_physician">Attending Physician</div>
                 <input type="text" id="attending_physician" name="attending_physician" >
             </div>
             <div>
-                <label for="appointment_details">Appointment Details</label>
+                <div class="appointment_details">Appointment Details</div>
                 <input type="text" id="appointment_details" name="appointment_details" >
             </div>
             <div>
