--- a/frontend/home.html
+++ b/frontend/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header">Medical Records Form</h1>
+        <h1 class="header">Medical Records System</h1>
         <form> 
             <div class="bold-header">Patient Information</div>
             <div>
